// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxGroup component should render properly 1`] = `
.c13 {
  overflow: visible;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  font-size: 2.4rem;
  cursor: inherit;
}

.c13 * {
  fill-opacity: 1;
  fill: #607890;
}

.c1 {
  margin: 0;
  color: inherit;
  font-size: 1.6rem;
  font-weight: 600;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.6rem;
}

.c6 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c15 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c15 > :first-child {
  margin-bottom: 0.9rem;
}

.c2 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: inherit;
  color: inherit;
}

.c7 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: inherit;
  color: inherit;
  padding: 0 1.6rem;
}

.c4 {
  display: grid;
  grid-template-columns: repeat(1,1fr);
}

.c16 {
  display: grid;
  grid-template-columns: repeat(2,1fr);
  margin-left: 4rem;
}

.c3 {
  white-space: initial;
  font-size: 1.4rem;
  line-height: 2.2rem;
  margin-top: 0.3rem;
  margin-bottom: 1.8rem;
  color: #13181D;
}

.c11 {
  border: 0.15rem solid;
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  border-radius: 22.2%;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c11 .c12 {
  z-index: 1;
  -webkit-transition: -webkit-transform 0.2s ease-in-out;
  -webkit-transition: transform 0.2s ease-in-out;
  transition: transform 0.2s ease-in-out;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.c9 {
  opacity: 0;
  margin: 0;
  width: 100%;
  height: 100%;
  outline: none;
  position: absolute;
}

.c9:checked ~ .c10 {
  border-color: #005AEE;
  background-color: #005AEE;
}

.c9:checked ~ .c10 .c12 {
  -webkit-transform: scale(0.7);
  -ms-transform: scale(0.7);
  transform: scale(0.7);
}

.c9:checked ~ .c10 .c12 * {
  fill: #ffffff;
}

.c9:not(:checked) ~ .c10 {
  background-color: transparent;
  border-color: #13181D;
}

.c9:not(:disabled):focus:not(:checked) ~ .c10 {
  border-color: #005AEE;
  box-shadow: 0 0 0.8rem #005AEE;
}

.c9:not(:disabled):focus:checked ~ .c10 {
  box-shadow: 0 0 0.8rem #005AEE;
}

.c8 {
  margin: 0.3rem;
  width: 1.8rem;
  height: 1.8rem;
  position: relative;
}

.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c5 * {
  cursor: pointer;
}

.c5:hover .c10 {
  border-color: #1A6BF0;
}

.c14 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c14 * {
  cursor: pointer;
}

.c14:hover .c10 {
  border-color: #1A6BF0;
  background-color: #1A6BF0;
}

<div>
  <div
    aria-describedby="Cars-helper-text"
    class="c0"
    id="Cars-wrapper"
    type="checkbox"
  >
    <span
      class="c1 c2"
      id="Cars-label"
      type="checkbox"
    >
      Cars
    </span>
    <span
      class="c3"
      id="Cars-helper-text"
      type="checkbox"
    >
      Helper Text
    </span>
    <div
      class="c4"
      id="Cars-options"
    >
      
      <label
        class="c5"
        for="Honda-Cars"
        id="Honda-Cars-wrapper"
        sizes="[object Object]"
      >
        <span
          class="c6 c7"
          id="Honda-Cars-label"
          type="checkbox"
        >
          Honda
        </span>
        <div
          class="c8"
        >
          <input
            class="c9"
            id="Honda-Cars"
            name="honda"
            sizes="[object Object]"
            type="checkbox"
          />
          <div
            class="c10 c11"
          >
            <svg
              class="c12 c13"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
                fill="green"
              />
            </svg>
          </div>
        </div>
      </label>
      
      <label
        class="c14"
        for="Hyundai-Cars"
        id="Hyundai-Cars-wrapper"
        sizes="[object Object]"
      >
        <span
          class="c6 c7"
          id="Hyundai-Cars-label"
          type="checkbox"
        >
          Hyundai
        </span>
        <div
          class="c8"
        >
          <input
            checked=""
            class="c9"
            id="Hyundai-Cars"
            name="hyundai"
            sizes="[object Object]"
            type="checkbox"
          />
          <div
            class="c10 c11"
          >
            <svg
              class="c12 c13"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
                fill="green"
              />
            </svg>
          </div>
        </div>
      </label>
      <div
        aria-describedby="Tata-Cars-helper-text"
        class="c15"
        id="Tata-Cars-wrapper"
        type="checkbox"
      >
        
        <label
          class="c5"
          for="Tata-Cars-select-all"
          id="Tata-Cars-select-all-wrapper"
          sizes="[object Object]"
        >
          <span
            class="c1 c7"
            id="Tata-Cars-select-all-label"
            type="checkbox"
          >
            Tata
          </span>
          <div
            class="c8"
          >
            <input
              class="c9"
              id="Tata-Cars-select-all"
              sizes="[object Object]"
              type="checkbox"
            />
            <div
              class="c10 c11"
            >
              <svg
                class="c12 c13"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
                  fill="green"
                />
              </svg>
            </div>
          </div>
        </label>
        <div
          class="c16"
          id="Tata-Cars-options"
        >
          
          <label
            class="c5"
            for="Jaguar-Tata-Cars"
            id="Jaguar-Tata-Cars-wrapper"
            sizes="[object Object]"
          >
            <span
              class="c6 c7"
              id="Jaguar-Tata-Cars-label"
              type="checkbox"
            >
              Jaguar
            </span>
            <div
              class="c8"
            >
              <input
                class="c9"
                id="Jaguar-Tata-Cars"
                name="jaguar"
                sizes="[object Object]"
                type="checkbox"
              />
              <div
                class="c10 c11"
              >
                <svg
                  class="c12 c13"
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
                    fill="green"
                  />
                </svg>
              </div>
            </div>
          </label>
          
          <label
            class="c5"
            for="Land Rover-Tata-Cars"
            id="Land Rover-Tata-Cars-wrapper"
            sizes="[object Object]"
          >
            <span
              class="c6 c7"
              id="Land Rover-Tata-Cars-label"
              type="checkbox"
            >
              Land Rover
            </span>
            <div
              class="c8"
            >
              <input
                class="c9"
                id="Land Rover-Tata-Cars"
                name="landRover"
                sizes="[object Object]"
                type="checkbox"
              />
              <div
                class="c10 c11"
              >
                <svg
                  class="c12 c13"
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
                    fill="green"
                  />
                </svg>
              </div>
            </div>
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CheckboxGroup component should render properly with disabled state 1`] = `
.c13 {
  overflow: visible;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  font-size: 2.4rem;
  cursor: inherit;
}

.c13 * {
  fill-opacity: 1;
  fill: #607890;
}

.c1 {
  margin: 0;
  color: inherit;
  font-size: 1.6rem;
  font-weight: 600;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.6rem;
}

.c6 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c14 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c14 > :first-child {
  margin-bottom: 0.9rem;
}

.c2 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: not-allowed;
  color: #98A7B7;
}

.c7 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: inherit;
  color: inherit;
  padding: 0 1.6rem;
}

.c4 {
  display: grid;
  grid-template-columns: repeat(1,1fr);
}

.c15 {
  display: grid;
  grid-template-columns: repeat(2,1fr);
  margin-left: 4rem;
}

.c3 {
  white-space: initial;
  font-size: 1.4rem;
  line-height: 2.2rem;
  margin-top: 0.3rem;
  margin-bottom: 1.8rem;
  color: #98A7B7;
}

.c11 {
  border: 0.15rem solid;
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  border-radius: 22.2%;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c11 .c12 {
  z-index: 1;
  -webkit-transition: -webkit-transform 0.2s ease-in-out;
  -webkit-transition: transform 0.2s ease-in-out;
  transition: transform 0.2s ease-in-out;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.c9 {
  opacity: 0;
  margin: 0;
  width: 100%;
  height: 100%;
  outline: none;
  position: absolute;
}

.c9:checked ~ .c10 {
  border-color: #dfe4e9;
  background-color: #98A7B7;
}

.c9:checked ~ .c10 .c12 {
  -webkit-transform: scale(0.7);
  -ms-transform: scale(0.7);
  transform: scale(0.7);
}

.c9:checked ~ .c10 .c12 * {
  fill: #98A7B7;
}

.c9:not(:checked) ~ .c10 {
  background-color: transparent;
  border-color: #98A7B7;
}

.c9:not(:disabled):focus:not(:checked) ~ .c10 {
  border-color: #005AEE;
  box-shadow: 0 0 0.8rem #005AEE;
}

.c9:not(:disabled):focus:checked ~ .c10 {
  box-shadow: 0 0 0.8rem #005AEE;
}

.c8 {
  margin: 0.3rem;
  width: 1.8rem;
  height: 1.8rem;
  position: relative;
}

.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: not-allowed;
  padding: 0.8rem 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c5 * {
  cursor: not-allowed;
}

<div>
  <div
    aria-describedby="Cars-helper-text"
    class="c0"
    id="Cars-wrapper"
    type="checkbox"
  >
    <span
      class="c1 c2"
      disabled=""
      id="Cars-label"
      type="checkbox"
    >
      Cars
    </span>
    <span
      class="c3"
      disabled=""
      id="Cars-helper-text"
      type="checkbox"
    >
      Helper Text
    </span>
    <div
      class="c4"
      id="Cars-options"
    >
      
      <label
        class="c5"
        disabled=""
        for="Honda-Cars"
        id="Honda-Cars-wrapper"
        sizes="[object Object]"
      >
        <span
          class="c6 c7"
          id="Honda-Cars-label"
          type="checkbox"
        >
          Honda
        </span>
        <div
          class="c8"
        >
          <input
            class="c9"
            disabled=""
            id="Honda-Cars"
            name="honda"
            sizes="[object Object]"
            type="checkbox"
          />
          <div
            class="c10 c11"
          >
            <svg
              class="c12 c13"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
                fill="green"
              />
            </svg>
          </div>
        </div>
      </label>
      
      <label
        class="c5"
        disabled=""
        for="Hyundai-Cars"
        id="Hyundai-Cars-wrapper"
        sizes="[object Object]"
      >
        <span
          class="c6 c7"
          id="Hyundai-Cars-label"
          type="checkbox"
        >
          Hyundai
        </span>
        <div
          class="c8"
        >
          <input
            checked=""
            class="c9"
            disabled=""
            id="Hyundai-Cars"
            name="hyundai"
            sizes="[object Object]"
            type="checkbox"
          />
          <div
            class="c10 c11"
          >
            <svg
              class="c12 c13"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
                fill="green"
              />
            </svg>
          </div>
        </div>
      </label>
      <div
        aria-describedby="Tata-Cars-helper-text"
        class="c14"
        id="Tata-Cars-wrapper"
        type="checkbox"
      >
        
        <label
          class="c5"
          disabled=""
          for="Tata-Cars-select-all"
          id="Tata-Cars-select-all-wrapper"
          sizes="[object Object]"
        >
          <span
            class="c1 c7"
            id="Tata-Cars-select-all-label"
            type="checkbox"
          >
            Tata
          </span>
          <div
            class="c8"
          >
            <input
              class="c9"
              disabled=""
              id="Tata-Cars-select-all"
              sizes="[object Object]"
              type="checkbox"
            />
            <div
              class="c10 c11"
            >
              <svg
                class="c12 c13"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
                  fill="green"
                />
              </svg>
            </div>
          </div>
        </label>
        <div
          class="c15"
          id="Tata-Cars-options"
        >
          
          <label
            class="c5"
            disabled=""
            for="Jaguar-Tata-Cars"
            id="Jaguar-Tata-Cars-wrapper"
            sizes="[object Object]"
          >
            <span
              class="c6 c7"
              id="Jaguar-Tata-Cars-label"
              type="checkbox"
            >
              Jaguar
            </span>
            <div
              class="c8"
            >
              <input
                class="c9"
                disabled=""
                id="Jaguar-Tata-Cars"
                name="jaguar"
                sizes="[object Object]"
                type="checkbox"
              />
              <div
                class="c10 c11"
              >
                <svg
                  class="c12 c13"
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
                    fill="green"
                  />
                </svg>
              </div>
            </div>
          </label>
          
          <label
            class="c5"
            disabled=""
            for="Land Rover-Tata-Cars"
            id="Land Rover-Tata-Cars-wrapper"
            sizes="[object Object]"
          >
            <span
              class="c6 c7"
              id="Land Rover-Tata-Cars-label"
              type="checkbox"
            >
              Land Rover
            </span>
            <div
              class="c8"
            >
              <input
                class="c9"
                disabled=""
                id="Land Rover-Tata-Cars"
                name="landRover"
                sizes="[object Object]"
                type="checkbox"
              />
              <div
                class="c10 c11"
              >
                <svg
                  class="c12 c13"
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
                    fill="green"
                  />
                </svg>
              </div>
            </div>
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CheckboxGroup component should render properly with fullWidth 1`] = `
.c13 {
  overflow: visible;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  font-size: 2.4rem;
  cursor: inherit;
}

.c13 * {
  fill-opacity: 1;
  fill: #607890;
}

.c1 {
  margin: 0;
  color: inherit;
  font-size: 1.6rem;
  font-weight: 600;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.6rem;
}

.c6 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c14 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c14 > :first-child {
  margin-bottom: 0.9rem;
}

.c2 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: not-allowed;
  color: #98A7B7;
}

.c7 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: inherit;
  color: inherit;
  padding: 0 1.6rem;
}

.c4 {
  display: grid;
  grid-template-columns: repeat(1,1fr);
}

.c15 {
  display: grid;
  grid-template-columns: repeat(2,1fr);
  margin-left: 4rem;
}

.c3 {
  white-space: initial;
  font-size: 1.4rem;
  line-height: 2.2rem;
  margin-top: 0.3rem;
  margin-bottom: 1.8rem;
  color: #98A7B7;
}

.c11 {
  border: 0.15rem solid;
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  border-radius: 22.2%;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c11 .c12 {
  z-index: 1;
  -webkit-transition: -webkit-transform 0.2s ease-in-out;
  -webkit-transition: transform 0.2s ease-in-out;
  transition: transform 0.2s ease-in-out;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.c9 {
  opacity: 0;
  margin: 0;
  width: 100%;
  height: 100%;
  outline: none;
  position: absolute;
}

.c9:checked ~ .c10 {
  border-color: #dfe4e9;
  background-color: #98A7B7;
}

.c9:checked ~ .c10 .c12 {
  -webkit-transform: scale(0.7);
  -ms-transform: scale(0.7);
  transform: scale(0.7);
}

.c9:checked ~ .c10 .c12 * {
  fill: #98A7B7;
}

.c9:not(:checked) ~ .c10 {
  background-color: transparent;
  border-color: #98A7B7;
}

.c9:not(:disabled):focus:not(:checked) ~ .c10 {
  border-color: #005AEE;
  box-shadow: 0 0 0.8rem #005AEE;
}

.c9:not(:disabled):focus:checked ~ .c10 {
  box-shadow: 0 0 0.8rem #005AEE;
}

.c8 {
  margin: 0.3rem;
  width: 1.8rem;
  height: 1.8rem;
  position: relative;
}

.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: not-allowed;
  padding: 0.8rem 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c5 * {
  cursor: not-allowed;
}

<div>
  <div
    aria-describedby="Cars-helper-text"
    class="c0"
    id="Cars-wrapper"
    type="checkbox"
  >
    <span
      class="c1 c2"
      disabled=""
      id="Cars-label"
      type="checkbox"
    >
      Cars
    </span>
    <span
      class="c3"
      disabled=""
      id="Cars-helper-text"
      type="checkbox"
    >
      Helper Text
    </span>
    <div
      class="c4"
      id="Cars-options"
    >
      
      <label
        class="c5"
        disabled=""
        for="Honda-Cars"
        id="Honda-Cars-wrapper"
        sizes="[object Object]"
      >
        <span
          class="c6 c7"
          id="Honda-Cars-label"
          type="checkbox"
        >
          Honda
        </span>
        <div
          class="c8"
        >
          <input
            class="c9"
            disabled=""
            id="Honda-Cars"
            name="honda"
            sizes="[object Object]"
            type="checkbox"
          />
          <div
            class="c10 c11"
          >
            <svg
              class="c12 c13"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
                fill="green"
              />
            </svg>
          </div>
        </div>
      </label>
      
      <label
        class="c5"
        disabled=""
        for="Hyundai-Cars"
        id="Hyundai-Cars-wrapper"
        sizes="[object Object]"
      >
        <span
          class="c6 c7"
          id="Hyundai-Cars-label"
          type="checkbox"
        >
          Hyundai
        </span>
        <div
          class="c8"
        >
          <input
            checked=""
            class="c9"
            disabled=""
            id="Hyundai-Cars"
            name="hyundai"
            sizes="[object Object]"
            type="checkbox"
          />
          <div
            class="c10 c11"
          >
            <svg
              class="c12 c13"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
                fill="green"
              />
            </svg>
          </div>
        </div>
      </label>
      <div
        aria-describedby="Tata-Cars-helper-text"
        class="c14"
        id="Tata-Cars-wrapper"
        type="checkbox"
      >
        
        <label
          class="c5"
          disabled=""
          for="Tata-Cars-select-all"
          id="Tata-Cars-select-all-wrapper"
          sizes="[object Object]"
        >
          <span
            class="c1 c7"
            id="Tata-Cars-select-all-label"
            type="checkbox"
          >
            Tata
          </span>
          <div
            class="c8"
          >
            <input
              class="c9"
              disabled=""
              id="Tata-Cars-select-all"
              sizes="[object Object]"
              type="checkbox"
            />
            <div
              class="c10 c11"
            >
              <svg
                class="c12 c13"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
                  fill="green"
                />
              </svg>
            </div>
          </div>
        </label>
        <div
          class="c15"
          id="Tata-Cars-options"
        >
          
          <label
            class="c5"
            disabled=""
            for="Jaguar-Tata-Cars"
            id="Jaguar-Tata-Cars-wrapper"
            sizes="[object Object]"
          >
            <span
              class="c6 c7"
              id="Jaguar-Tata-Cars-label"
              type="checkbox"
            >
              Jaguar
            </span>
            <div
              class="c8"
            >
              <input
                class="c9"
                disabled=""
                id="Jaguar-Tata-Cars"
                name="jaguar"
                sizes="[object Object]"
                type="checkbox"
              />
              <div
                class="c10 c11"
              >
                <svg
                  class="c12 c13"
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
                    fill="green"
                  />
                </svg>
              </div>
            </div>
          </label>
          
          <label
            class="c5"
            disabled=""
            for="Land Rover-Tata-Cars"
            id="Land Rover-Tata-Cars-wrapper"
            sizes="[object Object]"
          >
            <span
              class="c6 c7"
              id="Land Rover-Tata-Cars-label"
              type="checkbox"
            >
              Land Rover
            </span>
            <div
              class="c8"
            >
              <input
                class="c9"
                disabled=""
                id="Land Rover-Tata-Cars"
                name="landRover"
                sizes="[object Object]"
                type="checkbox"
              />
              <div
                class="c10 c11"
              >
                <svg
                  class="c12 c13"
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
                    fill="green"
                  />
                </svg>
              </div>
            </div>
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CheckboxGroup component should show indeterminate state when any one option is selected but not all 1`] = `
.c1 {
  overflow: visible;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  font-size: 2.4rem;
  cursor: inherit;
}

.c1 * {
  fill-opacity: 1;
  fill: #607890;
}

.c4 .c0 {
  z-index: 1;
  -webkit-transition: -webkit-transform 0.2s ease-in-out;
  -webkit-transition: transform 0.2s ease-in-out;
  transition: transform 0.2s ease-in-out;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.c2:checked ~ .c3 .c0 {
  -webkit-transform: scale(0.7);
  -ms-transform: scale(0.7);
  transform: scale(0.7);
}

.c2:checked ~ .c3 .c0 * {
  fill: #ffffff;
}

<svg
  class="c0 c1"
  fill="none"
  height="1em"
  viewBox="0 0 24 24"
  width="1em"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
    fill="green"
  />
</svg>
`;
